--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,90 @@
+/* mensaje de bienvenida */
+
+.fondo_oscuro{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.897);
+    position: fixed;
+    z-index: 1000;
+
+}
+
+.Banner_bienvenida{
+    width: 70%;
+    height: 50%;
+    border-radius: 10px;
+    background-color: yellow;
+    margin: auto;
+    position: relative; top: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.Banner_bienvenida h4{
+    font-size: 2.5em;
+    margin-bottom: 70px;
+}
+
+.Banner_bienvenida form{
+    display: flex;
+    flex-direction: column;
+}
+
+.Banner_bienvenida form p{
+    font-size: 1.4em;
+}
+
+.Banner_bienvenida form input{
+    margin-bottom: 15px;
+}
+
+.Banner_bienvenida form button{
+    margin: 15px 0 10px 0;
+}
+
+.inputs-bienvenida{
+    display: flex;
+    flex-direction: column;
+}
+
+.inputs-bienvenida label{
+    font-size: 1.4em;
+    margin-left: 10px;
+}
+
+.inputs-bienvenida input{
+    margin-right: 30px;
+    margin-left: 10px;
+}
+
+.inputs-bienvenida div{
+    margin-bottom: 20px;
+}
+
+#checbox_iniciar{
+    font-size: 1em;
+    border: none;
+    margin-left: 25px;
+    background-color: rgb(236, 10, 10);
+    border-radius:  0.375rem;
+    color: white;
+}
+
+#checbox_registrarse{
+    font-size: 1em;
+    border: none;
+    margin-left: 25px;
+    background-color: rgb(236, 10, 10);
+    border-radius: 0.375rem;
+    color: white;
+}
+
+/* mensaje de biendvenida */
+
+
 header{
     background-color: hwb(0 0% 100% / 0.233);
     position: fixed;
@@ -49,7 +136,7 @@ h4,p{
     margin-left: 20px;
 }
 
-.Banner_bienvenida{
+/* .Banner_bienvenida{
     width: 60%;
     height: 600px;
     border-radius: 10px;
@@ -57,7 +144,7 @@ h4,p{
     margin: auto;
     position: relative; top: -750px;
     z-index: 5;
-}
+} */
 
 .banner{
     height: 800px;
