--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -33,6 +33,15 @@
     flex-direction: column;
 }
 
+.Banner_bienvenida div{
+    display: flex;
+    flex-direction: column;
+}
+
+.Banner_bienvenida div input{
+    margin-bottom: 15px;
+}
+
 .Banner_bienvenida form p{
     font-size: 1.4em;
 }
@@ -52,7 +61,7 @@
 
 .inputs-bienvenida label{
     font-size: 1.4em;
-    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 .inputs-bienvenida input{
@@ -64,19 +73,17 @@
     margin-bottom: 20px;
 }
 
-#checbox_iniciar{
+#btn_iniciar{
     font-size: 1em;
     border: none;
-    margin-left: 25px;
     background-color: rgb(236, 10, 10);
     border-radius:  0.375rem;
     color: white;
 }
 
-#checbox_registrarse{
+#btn_registrar{
     font-size: 1em;
     border: none;
-    margin-left: 25px;
     background-color: rgb(236, 10, 10);
     border-radius: 0.375rem;
     color: white;
