--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -28,6 +28,12 @@
     margin-bottom: 70px;
 }
 
+.Banner_bienvenida i{
+    position: relative; top: -50px; right: -420px;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
 .Banner_bienvenida form{
     display: flex;
     flex-direction: column;
